Refactor: update useSeriesList hook and request service

--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bs">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Title & Description -->
     <title>Marvel Series App</title>
     <meta
       name="description"
       content="Pregledaj i istraži Marvel serije uz jednostavnu pretragu i sortiranje."
     />
+    <meta name="robots" content="index,follow" />
+    <meta name="theme-color" content="#111827" />
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Marvel Series App" />
     <meta
       property="og:description"
       content="Pregledaj i istraži Marvel serije uz jednostavnu pretragu i sortiranje."
     />
-    <meta property="og:image" content="https://tvoj-domen.com/og-image.png" />
-    <meta property="og:url" content="https://tvoj-domen.com" />
+    <meta property="og:image" content="/og.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -29,7 +29,7 @@
       name="twitter:description"
       content="Pregledaj i istraži Marvel serije uz jednostavnu pretragu i sortiranje."
     />
-    <meta name="twitter:image" content="https://tvoj-domen.com/og-image.png" />
+    <meta name="twitter:image" content="/og.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
